@@ -156,7 +156,12 @@ G_LOGFILE_PARTITION="1"
 G_LOGFILE_DIRECTORY="/boot"
 
 # Now follow the bootable OS'es and kernels on the device, this is the structure of the 2nd level menu.
+# There are two different methods for kernel listing, automatic and manual. The selection between the modes
+# is by G_OS<x>_AUTOLOCATION key. When set to "" the manual selection list is used, when set to a directory
+# location the kernel listing is generated from the dirrectory automatically.
 # Due to screen resolution issues, the maximum length of the kernel label is 30 characters.
+#
+# Manual kernel selection:
 #
 # - Each OS has 6 slots for kernels, but all need not be defined. Each used slot needs a G_OS<x>_<n>_LABEL
 #   that defines the text shown on the menu line and G_OS<x>_<n>_FILE which defines the kernel-to-boot, path
@@ -169,6 +174,14 @@ G_LOGFILE_DIRECTORY="/boot"
 # - The G_OS<x>_PARTITION and G_OS<x>_NAME define the partiton number and link name that the kernels reside on.
 #   This is necessarily not the same location that the OS is installed, though, just the kernel loading location.
 #
+# Automatic kernel selection
+#
+# - The system reads the kernel files from location defined by G_OS<x>_AUTOLOCATION. All files matching zImage_*
+#   are collected for listing, but only the first 6 are listed.
+# - When automatic kernel listing is enabled, G_OS<x>_NUM key and G_OS<x>_AUTOBOOT are not meaningful.
+# - When the listing is generated, the zImage_ is stripped from the kernel name and the rest of the name is
+#   used as the label presented to the user.
+#
 
 # The first OS is usually Nitdroid.
 # This section lists the Nitdroid specific switches and kernels
@@ -176,6 +189,7 @@ G_OS1_NUM=3
 G_OS1_AUTOBOOT=0
 G_OS1_PARTITION=2
 G_OS1_NAME="Nitdroid"
+G_OS1_AUTOLOCATION=""
 G_OS1_1_LABEL="Eyes zImage.pr13 kernel"
 G_OS1_1_FILE="/boot/Nitdroid/boot/zImage.pr13"
 G_OS1_2_LABEL="E-yes's L2Fix Nitdroid image"
@@ -195,6 +209,7 @@ G_OS2_NUM=5
 G_OS2_AUTOBOOT=0
 G_OS2_PARTITION=2
 G_OS2_NAME="Harmattan"
+G_OS2_AUTOLOCATION=""
 G_OS2_1_LABEL="2.6.32.54 + fbconsole"
 G_OS2_1_FILE="/boot/Harmattan/boot/Image-2.6.32.54-fbconsole"
 G_OS2_2_LABEL="2.6.32.54 Nemo backport"
@@ -214,6 +229,7 @@ G_OS3_NUM=2
 G_OS3_AUTOBOOT=0
 G_OS3_PARTITION=4
 G_OS3_NAME="Nemo"
+G_OS3_AUTOLOCATION=""
 G_OS3_1_LABEL="Latest 2.6.32"
 G_OS3_1_FILE="/boot/Nemo/boot/bzImage"
 G_OS3_2_LABEL="Unstable 3.5.3 SabreTSq"
@@ -233,6 +249,7 @@ G_OS4_NUM=1
 G_OS4_AUTOBOOT=0
 G_OS4_PARTITION=2
 G_OS4_NAME="Firefox"
+G_OS4_AUTOLOCATION=""
 G_OS4_1_LABEL="FFOS with Nitdroid kernel"
 G_OS4_1_FILE="/boot/Firefox/boot/zImage_e-yes_nitdroid+l2fix"
 G_OS4_2_LABEL=""
@@ -252,6 +269,7 @@ G_OS5_NUM=0
 G_OS5_AUTOBOOT=0
 G_OS5_PARTITION=2
 G_OS5_NAME="Ubuntu"
+G_OS5_AUTOLOCATION=""
 G_OS5_1_LABEL=""
 G_OS5_1_FILE=""
 G_OS5_2_LABEL=""
@@ -271,6 +289,7 @@ G_OS6_NUM=0
 G_OS6_AUTOBOOT=0
 G_OS6_PARTITION=2
 G_OS6_NAME="Sailfish"
+G_OS6_AUTOLOCATION=""
 G_OS6_1_LABEL=""
 G_OS6_1_FILE=""
 G_OS6_2_LABEL=""
